--- a/scripts/sh/generate-eutherian-alignlist.sh.in
+++ b/scripts/sh/generate-eutherian-alignlist.sh.in
@@ -5,6 +5,6 @@ cd '@pkgdatadir@/eutherian'
    for i in alignments/chr*/*.fa
    do 
       echo `awk 'NR==1' $i|cut -d ' ' -f 2-` $PWD/$i 
-   done > align.dat
+   done | sort -k 1,1 -k 2,2g > align.dat
 
 cd -
