Droso alignments have the right coordinates. Extraction works fine.
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   getalign-droso.py.in

--- a/scripts/python/getalign-droso.py.in
+++ b/scripts/python/getalign-droso.py.in
@@ -51,7 +51,7 @@ os.system("wget -c ftp://ftp.flybase.net/releases/FB2011_06/dmel_r5.38/gff/dmel-
 print "[",datetime.datetime.now(),"]  Extracting coordinate files..."
 print
 
-os.system('gunzip *.gff.gz')
+os.system('gunzip -vf *.gff.gz')
 
 print "[",datetime.datetime.now(),"]  Relevant coordinate extraction."
 print 
@@ -123,8 +123,8 @@ for i in maps:
    coordmel=i[1:4]
    if coordmel[1]!="NA" and coordmel[2]!='NA':
       coordmel[0]=coordmel[0][3:]
-      coordmel[1]=int(coordmel[1]+1)
-      coordmel[2]=int(coordmel[2]+1)
+      coordmel[1]=int(coordmel[1])+1
+      coordmel[2]=int(coordmel[2])
       r5coord=mapping.r4_map(coordmel)
       if  r5coord != ["", 0, 0]:
          os.chdir(i[0])
@@ -181,3 +181,6 @@ for folder in glob.glob('[0-9]*/'):
    os.chdir("..")
 
 os.chdir('..')
+
+print "[",datetime.datetime.now(),"]  Exit normally."
+print 
