help and imogene structure updated
All the help must now go to dedicated files in doc (example : extract
mode help goes to doc/extract.texi)

 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   Makefile.am
	modified:   doc/Makefile.am
	new file:   doc/extract.texi
	modified:   doc/imogene.texi
	modified:   src/help.cpp
	modified:   src/help.hpp
	modified:   src/imogene.cpp

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,3 +1,8 @@
 
+BUILT_SOURCES = extract.help
+
+extract.help: $(top_builddir)/src/imogene
+	$(top_builddir)/src/imogene extract --help > $@
+
 info_TEXINFOS = imogene.texi
-imogene_TEXINFOS = fdl.texi
+imogene_TEXINFOS = fdl.texi extract.texi extract.help
