On branch master  Changes to be committed:    (use "git reset HEAD <file>..." to unstage)
	new file:   example/genmot/bestuniq-pval.dat
	modified:   src/Makefile.am
	modified:   src/distinfo.ggo
	modified:   src/genmot.cpp

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,13 +6,24 @@
 bin_PROGRAMS = imogene ##distinfo
 ##bin_PROGRAMS = scangen distinfo 
 
+BUILT_SOURCES = extract_cmdline.c extract_cmdline.h distinfo_cmdline.c distinfo_cmdline.h genmot_cmdline.c genmot_cmdline.h genmot_cmdline.c genmot_cmdline.h
 
-imogene_SOURCES = imogene.hpp imogene.cpp extract.cpp extract.hpp genmot.cpp genmot.hpp help.cpp help.hpp scangen.cpp scangen.hpp sequence.cpp sequence.hpp motif.cpp motif.hpp tree.cpp tree.hpp random.cpp random.hpp vectortypes.cpp const.cpp const.hpp vectortypes.hpp distinfo.cpp distinfo.hpp
+imogene_SOURCES = imogene.hpp imogene.cpp extract.cpp extract.hpp genmot.cpp genmot.hpp help.cpp help.hpp scangen.cpp scangen.hpp sequence.cpp sequence.hpp motif.cpp motif.hpp tree.cpp tree.hpp random.cpp random.hpp vectortypes.cpp const.cpp const.hpp vectortypes.hpp distinfo.cpp distinfo.hpp extract_cmdline.c distinfo_cmdline.c imogene_cmdline.c genmot_cmdline.c
 imogene_CPPFLAGS = -DDATA_PATH='"${pkgdatadir}"'
 #imogene_LDADD = libdistinfo.a
 
-cmdlines: genmot.ggo distinfo.ggo imogene.ggo extract.ggo $(top_srcdir)/scripts/sh/generate-cmdline-files.sh
-	sh $(top_srcdir)/scripts/sh/generate-cmdline-files.sh
+extract_cmdline.c: extract.ggo
+	gengetopt --input=$(top_srcdir)/src/extract.ggo --func-name=extract_cmdline_parser \
+   	--arg-struct-name=extract_args_info --file-name=extract_cmdline
+distinfo_cmdline.c: distinfo.ggo
+	gengetopt --input=$(top_srcdir)/src/distinfo.ggo --func-name=distinfo_cmdline_parser \
+   	--arg-struct-name=distinfo_args_info --file-name=distinfo_cmdline
+imogene_cmdline.c: imogene.ggo
+	gengetopt --input=$(top_srcdir)/src/imogene.ggo --func-name=imogene_cmdline_parser \
+   	--arg-struct-name=imogene_args_info --file-name=imogene_cmdline
+genmot_cmdline.c: genmot.ggo
+	gengetopt --input=$(top_srcdir)/src/genmot.ggo --func-name=genmot_cmdline_parser \
+   	--arg-struct-name=genmot_args_info --file-name=genmot_cmdline
 	
 
 
