various modifs after install test
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   INSTALL
	modified:   Makefile.am
	modified:   configure.ac
	new file:   data/Makefile.am
	new file:   data/mapping.dat
	modified:   doc/install.texi
	modified:   src/distinfo.cpp
	modified:   src/genmot.cpp
	modified:   src/help.cpp

--- a/configure.ac
+++ b/configure.ac
@@ -43,6 +43,7 @@ AC_CONFIG_FILES([Makefile
                  scripts/python/Makefile
                  scripts/sh/Makefile
                  doc/Makefile
+                 data/Makefile
                  src/Makefile])
 
 AC_MSG_NOTICE([ Next step instruction
