Background coordinate extraction for droso+eutherian is operational. Still need to extract the alignments for faster usage.
	modified:   python/Makefile.am
	new file:   python/extractbackground-droso.py.in
	new file:   python/extractbackground-eutherian.py.in
	modified:   sh/generate-eutherian-alignlist.sh.in

--- a/scripts/sh/generate-eutherian-alignlist.sh.in
+++ b/scripts/sh/generate-eutherian-alignlist.sh.in
@@ -4,6 +4,7 @@ cd '@pkgdatadir@/eutherian'
 
    for i in alignments/chr*/*.fa
    do 
+      [[ ${i%/*} == "alignments/chrothers" ]] && continue
       echo `awk 'NR==1' $i|cut -d ' ' -f 2-` $PWD/$i 
    done | sort -k 1,1 -k 2,2g > align.dat
 
