created display mode.
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   TODO
	new file:   examples/display/align.dat
	new file:   examples/display/motifs.txt
	new file:   examples/display/test.fa
	new file:   examples/genmot/align.dat
	new file:   examples/genmot/bestuniq-pval.dat
	new file:   examples/genmot/coords-six-proms-short.dat
	new file:   examples/genmot/coords-six-proms.dat
	new file:   examples/genmot/motmeldb.txt
	new file:   examples/genmot/test.fa
	modified:   src/Makefile.am
	modified:   src/commandlist.txt
	modified:   src/display.cpp
	new file:   src/display.ggo
	new file:   src/display.hpp
	modified:   src/imogene-scangen.cpp
	modified:   src/imogene.cpp
	modified:   src/tree.hpp

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,9 +6,9 @@
 bin_PROGRAMS = imogene ##distinfo
 ##bin_PROGRAMS = scangen distinfo 
 
-BUILT_SOURCES = extract_cmdline.c extract_cmdline.h distinfo_cmdline.c distinfo_cmdline.h genmot_cmdline.c genmot_cmdline.h genmot_cmdline.c genmot_cmdline.h
+BUILT_SOURCES = extract_cmdline.c extract_cmdline.h distinfo_cmdline.c distinfo_cmdline.h genmot_cmdline.c genmot_cmdline.h imogene_cmdline.c imogene_cmdline.h display_cmdline.c display_cmdline.h
 
-imogene_SOURCES = imogene.hpp imogene.cpp extract.cpp extract.hpp genmot.cpp genmot.hpp help.cpp help.hpp scangen.cpp scangen.hpp sequence.cpp sequence.hpp motif.cpp motif.hpp tree.cpp tree.hpp random.cpp random.hpp vectortypes.cpp const.cpp const.hpp vectortypes.hpp distinfo.cpp distinfo.hpp extract_cmdline.c distinfo_cmdline.c imogene_cmdline.c genmot_cmdline.c
+imogene_SOURCES = imogene.hpp imogene.cpp extract.cpp extract.hpp genmot.cpp genmot.hpp help.cpp help.hpp scangen.cpp scangen.hpp sequence.cpp sequence.hpp motif.cpp motif.hpp tree.cpp tree.hpp random.cpp random.hpp vectortypes.cpp const.cpp const.hpp vectortypes.hpp distinfo.cpp distinfo.hpp display.cpp display.hpp imogene_cmdline.c distinfo_cmdline.c extract_cmdline.c display_cmdline.c genmot_cmdline.c
 imogene_CPPFLAGS = -DDATA_PATH='"${pkgdatadir}"'
 #imogene_LDADD = libdistinfo.a
 
@@ -18,6 +18,9 @@ extract_cmdline.c: extract.ggo
 distinfo_cmdline.c: distinfo.ggo
 	gengetopt --input=$(top_srcdir)/src/distinfo.ggo --func-name=distinfo_cmdline_parser \
    	--arg-struct-name=distinfo_args_info --file-name=distinfo_cmdline
+display_cmdline.c: display.ggo
+	gengetopt --input=$(top_srcdir)/src/display.ggo --func-name=display_cmdline_parser \
+   	--arg-struct-name=display_args_info --file-name=display_cmdline
 imogene_cmdline.c: imogene.ggo
 	gengetopt --input=$(top_srcdir)/src/imogene.ggo --func-name=imogene_cmdline_parser \
    	--arg-struct-name=imogene_args_info --file-name=imogene_cmdline
