--- a/scripts/python/extractbackground-droso.py.in
+++ b/scripts/python/extractbackground-droso.py.in
@@ -20,7 +20,6 @@ for folder in glob.glob('alignments/[0-9]*/'):
       aligncoords.append(coord)
       weights.append(float(coord[2]-coord[1]))
    os.chdir("../..")
-print "Alignment coordinates imported" 
 
 sumweights=0.0
 for w in weights:
@@ -35,7 +34,6 @@ for i in cds:
    i[1]=int(i[1])
    i[2]=int(i[2])
 fcds.close()
-print "CDS coordinates imported" 
 
 
 
@@ -81,13 +79,10 @@ while nbextracted<nbtoextract:
          nbextracted+=1
    nbtry+=1
    if nbtry>limittry:
-      print "Do not manage to extract a sufficient number of background sequence!"
+      print "Did not manage to extract a sufficient number of background sequence!"
       exit()
 
 coords.sort()
-fcoords=open('backcoords.dat', 'w' )
-counter=1
-for coord in coords:
-   line='bg-'+str(counter)+' '+coord[0]+' '+str(coord[1])+' '+str(coord[2])+'\n'
-   fcoords.write(line)
-   counter+=1
+
+for i,c in enumerate(coords):
+   print "back"+str(i),c[0],c[1],c[2]
