--- a/scripts/python/extractbackground-eutherian.py.in
+++ b/scripts/python/extractbackground-eutherian.py.in
@@ -19,7 +19,6 @@ for line in open("align.dat").readlines():
    coord=[line[0],int(line[1]),int(line[2])]
    aligncoords.append(coord)
    weights.append(float(coord[2]-coord[1]))
-print "Alignment coordinates imported" 
 
 sumweights=0.0
 for w in weights:
@@ -34,7 +33,6 @@ for i in cds:
    i[1]=int(i[1])
    i[2]=int(i[2])
 fcds.close()
-print "CDS coordinates imported" 
 
 
 
@@ -84,9 +82,6 @@ while nbextracted<nbtoextract:
       exit()
 
 coords.sort()
-fcoords=open('backcoords.dat', 'w' )
-counter=1
-for coord in coords:
-   line='bg-'+str(counter)+' '+coord[0]+' '+str(coord[1])+' '+str(coord[2])+'\n'
-   fcoords.write(line)
-   counter+=1
+
+for i,c in enumerate(coords):
+   print "back"+str(i),c[0],c[1],c[2]
