getalign is now in python scripts
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   scripts/Makefile.am
	modified:   scripts/python/getalign-eutherian.py.in
	deleted:    scripts/sh/Makefile.am
	deleted:    scripts/sh/generate-cmdline-files.sh
	deleted:    scripts/sh/generate-droso-alignlist.sh.in
	deleted:    scripts/sh/generate-eutherian-alignlist.sh.in

--- a/scripts/python/getalign-eutherian.py.in
+++ b/scripts/python/getalign-eutherian.py.in
@@ -156,5 +156,25 @@ for folder in glob.glob('chr*/'):
 
 os.chdir('..')
 
+print "[",datetime.datetime.now(),"]  Generate the list of alignments."
+
+lines=[]
+for fmavid in glob.glob('alignments/chr*/*.fa'):
+   if fmavid.split("/")[1]!="chrothers":
+      with open(fmavid) as mavid:
+         line=mavid.readline().rstrip().split(" ")
+      line.append(os.getcwd()+"/"+fmavid)
+      line[2]=int(line[2])
+      lines.append(line[1:])
+
+lines.sort()
+for i in lines:
+   i[1]=str(i[1])
+with open("align.dat","w") as fout:
+   for li in lines:
+      fout.write("".join(i+" " for i in lines))
+      fout.write("\n")
+
+
 print "[",datetime.datetime.now(),"]  Exit normally."
 print 
