load sequences from align folder
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	new file:   data/align/back0_2L_40156_42156.fa
	new file:   data/align/back1_2L_43482_45482.fa
	new file:   data/align/back2_2L_64746_66746.fa
	new file:   data/align/back3_2L_80158_82158.fa
	new file:   data/align/back4_2L_87407_89407.fa
	new file:   data/align/back5_2L_120271_122271.fa
	new file:   data/align/back6_2L_126540_128540.fa
	new file:   data/align/back7_2L_133936_135936.fa
	new file:   data/align/back8_2L_159945_161945.fa
	new file:   data/align/back9_2L_172392_174392.fa
	new file:   data/testdroso.dat
	modified:   doc/Makefile.am
	modified:   doc/install.texi
	new file:   examples/display/display/svg/test.svg
	new file:   examples/display/display/test_unknown_100072115_100072135.aux
	new file:   examples/display/display/test_unknown_100072115_100072135.log
	new file:   examples/display/display/test_unknown_100072115_100072135.pdf
	new file:   examples/display/display/test_unknown_100072115_100072135.tex
	new file:   examples/extract/align/test-overlap_1_100072115_100072135.fa
	new file:   examples/genmot/align/test.fa
	new file:   examples/genmot/motifs.txt
	modified:   src/display.cpp
	modified:   src/display.ggo
	modified:   src/display.hpp
	modified:   src/extract.cpp
	modified:   src/genmot.cpp
	modified:   src/genmot.ggo
	modified:   src/imogene.cpp
	modified:   src/sequence.cpp
	modified:   src/sequence.hpp

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -11,4 +11,4 @@ genmot.help: $(top_builddir)/src/imogene
 	$(top_builddir)/src/imogene genmot --help > $@
 
 info_TEXINFOS = imogene.texi
-imogene_TEXINFOS = fdl.texi extract.texi extract.help distinfo.texi distinfo.help genmot.texi genmot.help test.texi
+imogene_TEXINFOS = fdl.texi extract.texi extract.help distinfo.texi distinfo.help genmot.texi genmot.help install.texi test.texi
