display mode documentation
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

 modified:   doc/Makefile.am
 new file:   doc/display.texi
 modified:   doc/imogene.texi

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,5 +1,5 @@
 
-BUILT_SOURCES = extract.help distinfo.help genmot.help
+BUILT_SOURCES = extract.help distinfo.help genmot.help display.help
 
 extract.help: $(top_builddir)/src/imogene
 	$(top_builddir)/src/imogene extract --help > $@
@@ -10,5 +10,8 @@ distinfo.help: $(top_builddir)/src/imogene
 genmot.help: $(top_builddir)/src/imogene
 	$(top_builddir)/src/imogene genmot --help > $@
 
+display.help: $(top_builddir)/src/imogene
+	$(top_builddir)/src/imogene display --help > $@
+
 info_TEXINFOS = imogene.texi
-imogene_TEXINFOS = fdl.texi extract.texi extract.help distinfo.texi distinfo.help genmot.texi genmot.help install.texi test.texi
+imogene_TEXINFOS = fdl.texi extract.texi extract.help distinfo.texi distinfo.help genmot.texi genmot.help install.texi display.texi display.help test.texi
