--- a/scripts/python/Makefile.am
+++ b/scripts/python/Makefile.am
@@ -17,9 +17,9 @@
 # You should have received a copy of the GNU General Public License
 # along with Imogene; see the file COPYING  If not, see <http://www.gnu.org/licenses/>.
 
-python_PYTHON = getalign-droso.py getalign-eutherian.py mapping.py emf2fasta.pyx extractbackground-droso.py extractbackground-eutherian.py
+python_PYTHON = getalign-droso.py getalign-eutherian.py mapping.py emf2fasta.pyx extractbackground-droso.py extractbackground-eutherian.py weblogo-display.py
 CLEANFILES = $(python_PYTHON)
-EXTRA_DIST = getalign-droso.py.in getalign-eutherian.py.in mapping.py.in emf2fasta.pyx.in extractbackground-droso.py.in extractbackground-eutherian.py.in
+EXTRA_DIST = getalign-droso.py.in getalign-eutherian.py.in mapping.py.in emf2fasta.pyx.in extractbackground-droso.py.in extractbackground-eutherian.py.in weblogo-display.py.in
 
 do_subst = sed -e 's,[@]pythondir[@],$(pythondir),g' -e 's,[@]pkgdatadir[@],$(pkgdatadir),g'
 
@@ -39,6 +39,10 @@ do_substmap = sed -e 's,[@]pkgdatadir[@],$(pkgdatadir),g'
 mapping.py: mapping.py.in
 	$(do_substmap) < $(srcdir)/mapping.py.in > mapping.py
 	chmod +x mapping.py
+
+weblogo-display.py: weblogo-display.py.in
+	$(do_substmap) < $(srcdir)/weblogo-display.py.in > weblogo-display.py
+	chmod +x weblogo-display.py
 
 extractbackground-droso.py: extractbackground-droso.py.in
 	$(do_subst) < $(srcdir)/extractbackground-droso.py.in > extractbackground-droso.py
