--- a/scripts/python/weblogo-display.py.in
+++ b/scripts/python/weblogo-display.py.in
@@ -20,19 +20,37 @@
 # along with Imogene; see the file COPYING  If not, see <http://www.gnu.org/licenses/>.
 
 from weblogolib import *
-from numpy import array,transpose
+from numpy import array,transpose,log
+
 import sys
 
 motname=sys.argv[1]
-f=[]
-for freqline in sys.argv[2:]: 
+
+# background composition
+concc=float(sys.argv[2])
+conca=(0.5-concc)
+conct=conca
+concg=concc
+backfreq=array([conca,conct,concc,concg])
+
+# Motif base frequencies
+matfreq=[]
+for freqline in sys.argv[3:]: 
    freqs=freqline.split(',')
    for i in range(len(freqs)):
       freqs[i]=float(freqs[i])
-   f.append(freqs)
-f=array(f)
-data=LogoData.from_counts(alphabet='ATCG',counts=f,prior=None)
+   matfreq.append(freqs)
+matfreq=array(matfreq)
+
+# Initialize LogoData object and compute RELATIVE entropy
+data=LogoData.from_counts(alphabet='ATCG',counts=matfreq)
+for i in range(len(data.entropy)):
+   data.entropy[i]=0
+   for j in range(4):
+      data.entropy[i] += matfreq[i,j]*log(matfreq[i,j]/backfreq[j])
 print data
+
+# Logo display options
 options = LogoOptions()
 #options.logo_title = motname
 #options.title_fontsize = 8
@@ -40,5 +58,7 @@ options.fineprint = ""
 options.color_scheme = std_color_schemes["classic"]
 options.logo_font    = "Arial-BoldMT"
 format = LogoFormat(data,options)
+
+# PDF output
 fout = open(motname+'.pdf', 'w')
 pdf_formatter(data,format,fout)
