Switch to ACGT convention.
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   scripts/python/weblogo-display.py.in
	modified:   src/genmot.cpp
	modified:   src/motif.cpp
	modified:   src/sequence.cpp

--- a/scripts/python/weblogo-display.py.in
+++ b/scripts/python/weblogo-display.py.in
@@ -43,12 +43,12 @@ for freqline in sys.argv[3:]:
 matfreq=array(matfreq)
 
 # Initialize LogoData object and compute RELATIVE entropy
-data=LogoData.from_counts(alphabet='ATCG',counts=matfreq)
+data=LogoData.from_counts(alphabet='ACGT',counts=matfreq)
 for i in range(len(data.entropy)):
    data.entropy[i]=0
    for j in range(4):
       data.entropy[i] += matfreq[i,j]*log(matfreq[i,j]/backfreq[j])
-print data
+#print data
 
 # Logo display options
 options = LogoOptions()
