--- a/scripts/python/getalign-droso.py.in
+++ b/scripts/python/getalign-droso.py.in
@@ -106,6 +106,11 @@ os.system('awk \'/FlyBase\tmRNA\t/ {\
       }\' *.gff | sort -k 5,5 -k 2,2g |\
                   uniq -f 1 | awk \'{print $2,$3,$4,$5,$1}\' |\
                   sort -k 3,3 -k 1,1g  > TSS-coord.dat')
+
+print "[",datetime.datetime.now(),"]  Genes list creation."
+print 
+
+os.system('awk \'{print $4}\' TSS-coord.dat | sort -u > genelist.dat')
    
 
 def processcoord(coords):
