Input coordinates now should comply with BED4 standards (chr start stop name)
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   data/background-droso-coords.dat
	modified:   data/background-eutherian-coords.dat
	modified:   examples/extract/coords-droso.dat
	modified:   examples/extract/coords-eutherian.dat
	modified:   scripts/python/extractbackground-droso.py.in
	modified:   scripts/python/extractbackground-eutherian.py.in
	modified:   src/motif.cpp
	modified:   src/motif.hpp
	modified:   src/sequence.cpp

--- a/scripts/python/extractbackground-droso.py.in
+++ b/scripts/python/extractbackground-droso.py.in
@@ -104,4 +104,4 @@ while nbextracted<nbtoextract:
 coords.sort()
 
 for i,c in enumerate(coords):
-   print "back"+str(i),c[0],c[1],c[2]
+   print c[0],c[1],c[2],"back"+str(i)
