backfreq correction in weblogodisplay
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   ../../TODO
	modified:   ../../data/Makefile.am
	modified:   weblogo-display.py.in

--- a/scripts/python/weblogo-display.py.in
+++ b/scripts/python/weblogo-display.py.in
@@ -31,7 +31,7 @@ concc=float(sys.argv[2])
 conca=(0.5-concc)
 conct=conca
 concg=concc
-backfreq=array([conca,conct,concc,concg])
+backfreq=array([conca,concc,concg,conct])
 
 # Motif base frequencies
 matfreq=[]
