--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -18,5 +18,5 @@
 # along with Imogene; see the file COPYING  If not, see <http://www.gnu.org/licenses/>.
 
 
-dist_pkgdata_DATA = mapping.dat ../data/background-droso-coords.dat
+dist_pkgdata_DATA = mapping.dat ../data/background-droso-coords.dat ../data/background-eutherian-coords.dat
 
