--- a/scripts/python/getalign-eutherian.py.in
+++ b/scripts/python/getalign-eutherian.py.in
@@ -216,7 +216,7 @@ for i in lines:
    i[1]=str(i[1])
 with open("align.dat","w") as fout:
    for li in lines:
-      fout.write("".join(i+" " for i in lines))
+      fout.write("".join(i+" " for i in li))
       fout.write("\n")
 
 
