mobyle page added and environment variables used
 On branch master
 Your branch is ahead of 'github/master' by 1 commit.

 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   Makefile.am
	modified:   README
	modified:   configure.ac
	new file:   mobyle/COPYING.LIB
	new file:   mobyle/Makefile.am
	new file:   mobyle/README
	new file:   mobyle/imogene.xml.in
	modified:   scripts/python/extractbackground-droso.py.in
	modified:   scripts/python/extractbackground-eutherian.py.in
	modified:   scripts/python/getalign-droso.py.in
	modified:   scripts/python/getalign-eutherian.py.in
	modified:   scripts/python/mapping.py.in
	modified:   src/extract.cpp
	modified:   src/extract.hpp
	modified:   src/genmot.cpp
	modified:   src/genmot.hpp
	modified:   src/help.hpp
	modified:   src/imogene.hpp
	modified:   src/scangen.cpp
	modified:   src/scangen.hpp

--- a/scripts/python/extractbackground-droso.py.in
+++ b/scripts/python/extractbackground-droso.py.in
@@ -31,7 +31,10 @@ limittry=nbtoextract*5
 aligncoords=[]
 weights=[]
 
-os.chdir('@pkgdatadir@/droso')
+try:
+   os.chdir(os.environ['IMOGENE_DATA']+'/droso')
+except KeyError:
+   os.chdir('@pkgdatadir@/droso')
 
 for folder in glob.glob('alignments/[0-9]*/'):
    os.chdir(folder)
