--- a/scripts/python/getalign-droso.py.in
+++ b/scripts/python/getalign-droso.py.in
@@ -38,7 +38,11 @@ def mkdir(path):
 sys.path.append("@pythondir@")
 import mapping
 
-os.chdir('@pkgdatadir@')
+try:
+   os.chdir(os.environ['IMOGENE_DATA'])
+except KeyError:
+   os.chdir('@pkgdatadir@')
+
 mkdir('droso')
 os.chdir('droso')
 print "[",datetime.datetime.now(),"]  Downloading Mavid Mercator alignment files..."
