README, doc and mobyle page updated + minor bug
* mapping now import os to properly handle environment variables

 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	deleted:    README
	new file:   README.md
	deleted:    TODO
	new file:   doc/imogene-mob.pdf
	new file:   doc/imogene-mob.png
	modified:   doc/imogene.texi
	modified:   doc/install.texi
	new file:   doc/mobyle.texi
	modified:   mobyle/Makefile.am
	modified:   mobyle/imogene.xml.in
	modified:   scripts/python/mapping.py.in
	deleted:    typescript

--- a/scripts/python/mapping.py.in
+++ b/scripts/python/mapping.py.in
@@ -24,6 +24,8 @@ of the Drosophila melanogaster genome.
 See the website 'http://www.fruitfly.org/sequence/release5genomic.shtml' for further information
 """
 
+import os
+
 try:
    fmap=open(os.environ['IMOGENE_DATA']+'/mapping.dat')
 except KeyError:
